<resources>
    <string name="app_name">Nyx.FarmShop</string>
    <string name="shop_icon">Маркет</string>
    <string name="food_icon">Меню</string>
    <string name="basket_icon">Корзина</string>
    <string name="info_icon">Инфо</string>
    <string name="icon_shop_description">Иконка магазина</string>
    <string name="icon_food_description">Иконка меню</string>
    <string name="icon_basket_description">Иконка корзины</string>
    <string name="icon_info_description">Иконка информации</string>
    <string name="hello_menu_fragment">Hello menu fragment</string>
    <string name="hello_market_fragment">Hello market fragment</string>
    <string name="hello_basket_fragment">Hello basket fragment</string>
    <string name="hello_info_fragment">Hello info fragment</string>
    <string name="profile_icon">Профиль</string>
    <string name="prompt_number_phone">Номер телефона</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Войти</string>
    <string name="invalid_username">Неверный номер телефона</string>
    <string name="invalid_password">Пароль должен содержать более 5 символов</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_city">Ваш город</string>
    <string name="call">Телефон для заказов и справки: </string>
    <string name="mail">Напишите нам на почту по любым вопросам: </string>
    <string name="info_legal_and_pay">Правовая информация</string>
    <string name="legal_info">Правовая информация</string>
    <string name="pay_info">Доставка и оплата</string>
    <string name="social">Наши соцсети</string>
    <string name="moscow_number">+ 7 (495) 555 55 55</string>
    <string name="spb_number">+ 7 (812) 566 56 57</string>
    <string name="kazan_number">+ 7 (843) 655 34 35</string>
    <string name="novosibirsk_number">+ 7 (383) 455 54 35</string>
    <string name="sochi_number">+ 7 (862) 567 76 56</string>
    <string name="farmers_shop_ru">farmers@shop.ru</string>
    <string name="registration_text"><u>Зарегистрироваться</u></string>
    <string name="cancel_dialog_sheet">Отменить</string>
    <string name="cucumber">Огурцы</string>
    <string name="tomato">Помидоры</string>
    <string name="potato">Картофель</string>
    <string name="onion">Лук</string>
    <string name="cabbage">Капуста</string>
    <string name="eggplant">Баклажан</string>
    <string name="garlic">Чеснок</string>
    <string name="bulgarian_spice">Болгарский перец</string>
    <string name="vegetables">Овощи</string>
    <string name="fruits">Фрукты</string>
    <string name="meat">Мясо</string>
    <string name="grocery">Молоко, хлеб, яйца</string>
    <string name="send_mail">Написать письмо</string>
    <string-array name="cities">
        <item>Москва</item>
        <item>Санкт-Петербург</item>
        <item>Казань</item>
        <item>Новосибирск</item>
        <item>Сочи</item>
    </string-array>
</resources>